// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-enterprise-infra-planner - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Architect and provision enterprise Azure infrastructure from workload descriptions. For cloud architects and platform engineers planning networking, identity, security, compliance, and multi-resource topologies with WAF alignment. Generates Bicep or Terraform directly (no azd). WHEN: 'plan Azure infrastructure', 'architect Azure landing zone', 'design hub-spoke network', 'plan multi-region DR topology', 'set up VNets firewalls and private endpoints', 'subscription-scope Bicep deployment'. PREFER azure-prepare FOR app-centric workflows.",
  "extractedKeywords": [
    "alignment",
    "app-centric",
    "architect",
    "architects",
    "azure",
    "azure-prepare",
    "bicep",
    "cli",
    "cloud",
    "compliance",
    "container",
    "cosmos",
    "deploy",
    "deployment",
    "descriptions",
    "design",
    "directly",
    "endpoints",
    "engineers",
    "enterprise",
    "firewalls",
    "from",
    "generates",
    "hub-spoke",
    "identity",
    "infra",
    "infrastructure",
    "keyvault",
    "landing",
    "mcp",
    "multi-region",
    "multi-resource",
    "network",
    "networking",
    "plan",
    "planner",
    "planning",
    "platform",
    "prefer",
    "private",
    "provision",
    "rbac",
    "security",
    "storage",
    "subscription-scope",
    "terraform",
    "topologies",
    "topology",
    "vnets",
    "when",
    "with",
    "workflows",
    "workload",
    "zone",
  ],
  "name": "azure-enterprise-infra-planner",
}
`;

exports[`azure-enterprise-infra-planner - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "alignment",
  "app-centric",
  "architect",
  "architects",
  "azure",
  "azure-prepare",
  "bicep",
  "cli",
  "cloud",
  "compliance",
  "container",
  "cosmos",
  "deploy",
  "deployment",
  "descriptions",
  "design",
  "directly",
  "endpoints",
  "engineers",
  "enterprise",
  "firewalls",
  "from",
  "generates",
  "hub-spoke",
  "identity",
  "infra",
  "infrastructure",
  "keyvault",
  "landing",
  "mcp",
  "multi-region",
  "multi-resource",
  "network",
  "networking",
  "plan",
  "planner",
  "planning",
  "platform",
  "prefer",
  "private",
  "provision",
  "rbac",
  "security",
  "storage",
  "subscription-scope",
  "terraform",
  "topologies",
  "topology",
  "vnets",
  "when",
  "with",
  "workflows",
  "workload",
  "zone",
]
`;
